==> luongtranpt/HUST_PRJ_2/Firmware/NODE_v2_5/Core/Src/sx1278.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include <stdlib.h>
#include <math.h>
#include <stdbool.h>
#include <time.h>
#include "main.h"
#include "spi.h"
#include "gpio.h"
#include "sx1278.h"

uint8_t sx1278_read_reg(uint8_t reg)
{
	uint8_t txByte = reg & 0x7f;
	uint8_t rxByte = 0x00;
    HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_RESET);
	HAL_SPI_Transmit(HSPI, &txByte, 1, 1000);
	while (HAL_SPI_GetState(HSPI) != HAL_SPI_STATE_READY);
	HAL_SPI_Receive(HSPI, &rxByte, 1, 1000);
	while (HAL_SPI_GetState(HSPI) != HAL_SPI_STATE_READY);
    HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_SET);
    return rxByte;
}

void sx1278_write_reg(uint8_t reg, uint8_t val)
{
	uint8_t ureg = reg | 0x80;
	HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_RESET);
	HAL_SPI_Transmit(HSPI, &ureg, 1, 1000);
	while (HAL_SPI_GetState(HSPI) != HAL_SPI_STATE_READY);
	HAL_SPI_Transmit(HSPI, &val, 1, 1000);
	while (HAL_SPI_GetState(HSPI) != HAL_SPI_STATE_READY);
	HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_SET);
}

void sx1278_reset(void)
{
	HAL_GPIO_WritePin(LoRa_RST_PORT, LoRa_RST_PIN, GPIO_PIN_RESET);
    HAL_Delay(50);
    HAL_GPIO_WritePin(LoRa_RST_PORT, LoRa_RST_PIN, GPIO_PIN_SET);
    HAL_Delay(50);
    HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_SET);
}
